@@ -4,7 +4,7 @@ Wed, 05 Sep 2007 16:12:35 -0500.
 It was downloaded from http://math.missouristate.edu/~erik/files
 
 Upstream Author: Erik Greenwald <erik@smluc.org>
-Copyright: Copyright (C) 2001-2008 Erik Greenwald
+Copyright: Copyright (C) 2001-2009 Erik Greenwald
 
 License:
 
