@@ -1,7 +1,7 @@
 
 /*****************************************************************************
  * glpong - opengl/sdl game of the original video game; pong.                *
- * Copyright (C) 2001-2008 Erik Greenwald <erik@smluc.org>                   *
+ * Copyright (C) 2001-2009 Erik Greenwald <erik@smluc.org>                   *
  *                                                                           *
  * This program is free software; you can redistribute it and/or modify      *
  * it under the terms of the GNU General Public License as published by      *
@@ -19,7 +19,7 @@
  ****************************************************************************/
 
 /*
- * $Id: main.c,v 1.30 2008/01/15 04:33:22 erik Exp $
+ * $Id: main.c,v 1.31 2009/08/31 16:42:16 erik Exp $
  */
 
 #include <stdio.h>
@@ -77,7 +77,7 @@ int
 doversion (char *name)
 {
     printf ("\
-%s (%s) Copyright (C) 2001-2008 Erik Greenwald <erik@smluc.org>\n\
+%s (%s) Copyright (C) 2001-2009 Erik Greenwald <erik@smluc.org>\n\
 %s comes with ABSOLUTELY NO WARRANTY. Please read the GPL for details.\n\n", name, PACKAGE, VERSION);
     return 0;
 }
@@ -146,7 +146,7 @@ main (int argc, char **argv)
     atexit (SDL_Quit);
 
     SDL_ShowCursor (0);
-    SDL_WM_SetCaption ("glpong (C) 2001-2008 Erik Greenwald", "glpong");
+    SDL_WM_SetCaption ("glpong (C) 2001-2009 Erik Greenwald", "glpong");
 
     g = game_init ();
 
