@@ -1,3 +1,6 @@
+20090831:
+	* Update copyright information
+
 20080131:
 	* Release 1.3
 
